# story-dream-factory

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: character_agent.py  master_narrator.py  narrator.py  proposal.py  scene_director.py
backend/app/api/: builder.py  deps.py  director.py  import_world.py  router.py  simulation.py  websocket.py  worlds.py
backend/app/engine/: simulator.py  story_state.py
backend/app/imagegen/: gateway.py
backend/app/llm/: config.py  gateway.py
backend/app/memory/: reflection.py  retrieval.py  writer.py
backend/app/models/: character.py  director.py  enums.py  event.py  image_asset.py  location.py  memory.py  relationship.py  world.py
backend/app/persistence/: db.py  image_store.py  repository.py  world_store.py
backend/app/physics/: engine.py  rules.py
backend/app/worldbuilder/: consistency.py  conversation.py  health_check.py  session.py  stages.py  templates.py  visual_anchor.py
backend/scripts/: check_imagegen.py  check_llm.py  seed_world.py
backend/tests/: conftest.py  test_config.py
backend/tests/agents/: test_character_agent.py  test_master_narrator.py  test_narrator.py  test_proposal.py  test_scene_director.py
backend/tests/api/: test_builder.py  test_director.py  test_import.py  test_simulation.py  test_websocket.py  test_worlds.py
backend/tests/engine/: test_simulator.py  test_story_state.py
backend/tests/imagegen/: test_gateway.py
backend/tests/llm/: test_gateway.py
backend/tests/memory/: test_writer.py  (+2 more)
(+55 files in other folders)
